--- a/styles.css
+++ b/styles.css
@@ -100,11 +100,29 @@ h3{
     color: rgb(200,200,200);
     font-style: italic;
 }
-#beginning>div>p{
-    font-size: 38px;
-    position: relative;
-    top:3rem;
+#main-phone>p{
+    font-size: 32px;
+    color: white;
 }
+
+#main-phone{
+    display: flex;
+    position: relative;
+    top: 6rem;
+    align-items: center;
+    transition: background-color ease .5s;
+    padding: .5rem 1rem;
+}
+#main-phone:hover{
+    background-color: rgba(200,200,200,.1);
+    border-radius: 3px;
+}
+#main-phone>img{
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 1rem;
+}
+
 #whoIm{
     width: 100%;
     height: 800px;
@@ -210,6 +228,10 @@ h4{
     flex-direction: column;
     justify-content: space-around;
     text-align: justify;
+    color: white;
+}
+.contact-detail>span>a{
+    color: white;
 }
 footer{
     width: 100%;
