--- a/styles1.css
+++ b/styles1.css
@@ -68,16 +68,16 @@ main{
 #beginning{
     top: -5rem;
     width: 100%;
-    height: 100vh;
+    height: 85vh;
     position: relative;
     z-index: 900;
-    /*box-shadow: 0 5px 5px rgba(00, 00, 00, .22);*/
+    box-shadow: 0 3rem 12px 6px rgba(0,00,0,.2);
 }
 #beginning>img{
     object-fit: cover;
     width: 100%;  
     filter: brightness(.5);
-    height: 100vh;
+    height: 90vh;
 }
 #beginning>div{
     display: flex;
@@ -88,7 +88,7 @@ main{
     align-items: center;
     position: absolute;
     width: 100%;
-    top:30%;
+    top:25%;
 }
 h2{
     font-size: 48px;
@@ -108,7 +108,7 @@ h3{
 #main-phone{
     display: flex;
     position: relative;
-    top: 6rem;
+    top: 8rem;
     align-items: center;
     transition: background-color ease .5s;
     padding: .5rem 1rem;
@@ -123,59 +123,47 @@ h3{
     margin-right: 1rem;
 }
 
-#whoIm{
-    width: 100%;
-    height: 800px;
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-content: center;
-    align-items: center;
-    z-index: 800;
-    padding: 3rem 0;
+#services-title{
+    font-size: 1.8rem;
+    margin-bottom: 2rem;
+    font-family: "Lora";
+    font-weight: 600;
+    color: #121212;
 }
-#whoIm>p{
-    width: 33%;
-    height: 80%;
+#services-title>span{
+    width: 100%;
+    display: block;
+    height: 5px;
     background-color: var(--secondary-color);
-    font-size: 18px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.3);
-    border-radius: 2px;
-    color: whitesmoke;
 }
-#whoIm>img{
-    object-fit: cover;
-    height: 33vw;
-    width: 33vw;
-    overflow: hidden;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-}
+
 #services{
-    width: 100%;
+    width: 80%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
     z-index: 950;
     color: rgb(30,30,30);
     background-color: white;
-    height: 22rem;
+    height: 100%;
+    margin-bottom: 3rem;
 }
 .service-kind{
     display: flex;
-    width:20vw;
-    height: 30vw;
-    flex-direction: column;
+    width:50vw;
+    height: 15vw;
+    flex-direction: row;
     position: relative;
-    top:-8rem;
     align-items: center;
     align-self: stretch;
     background-color: var(--secondary-color);
     color: #999999;
-    padding: 1rem 1rem 5rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     text-align: center;
     justify-content: space-around;
+    margin-bottom: 2rem;
+    box-shadow: 0px 8px 12px 6px;
 }
 .icon{
     width: 6rem;
@@ -185,21 +173,6 @@ h3{
     background: var(--tertiary-color);
     border-radius: 3px;
 }
-/* #money-icon>img{
-
-}
-#employee-icon{
-    mask: url(./icons/employee.svg);
-    mask-size: cover;
-}
-#family-icon{
-    mask: url(./icons/family.svg);
-    mask-size: cover;
-}
-#gavel-icon{
-    mask: url(./icons/gavel.svg);
-    mask-size: cover;
-} */
 h4{
     color: var(--tertiary-color);
     font-size: 20px;
@@ -207,10 +180,12 @@ h4{
 }
 .odd{
     background-color: #16181d;
+    flex-direction: row-reverse;
+    align-self: flex-end;
 }
 #contact{
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
