Media query for mobile devices

--- a/styles1.css
+++ b/styles1.css
@@ -100,6 +100,10 @@ h3{
     color: rgb(200,200,200);
     font-style: italic;
 }
+#introduction{
+    margin-top: 2rem;
+    font-style: italic;
+}
 #main-phone>p{
     font-size: 32px;
     color: white;
@@ -108,7 +112,7 @@ h3{
 #main-phone{
     display: flex;
     position: relative;
-    top: 8rem;
+    top: 4rem;
     align-items: center;
     transition: background-color ease .5s;
     padding: .5rem 1rem;
@@ -185,7 +189,7 @@ h4{
 }
 #contact{
     width: 100%;
-    height: 20vh;
+    height: 15vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -193,7 +197,7 @@ h4{
     z-index: 600;
     color: white;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
 }
 .contact-detail{
     width: 100%;
@@ -219,4 +223,93 @@ footer>p,a{
     color: darkgrey;
     padding: 1rem 0;
     text-decoration: none;
+}
+
+
+
+
+/*MEDIA*/
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+    header{
+        padding: 0;
+        height: 3rem;
+        margin-top: 1rem;
+    }
+    header>a{
+        width: 100%;
+    }
+    #title{
+        width: 100%;
+        align-items: center;
+    }
+    #title>img{
+        width: 3.5rem;
+    }
+    header>ul{
+        display: none;
+    }
+
+    h3{
+        font-size: 16px;
+    }
+    h2{
+        font-size: 28px;
+    }
+    #introduction{
+        padding: 0 1rem;
+        font-size: 14px;
+        margin-bottom: 2rem;
+    }
+    #main-phone{
+        top: 0;
+    }
+    #main-phone>img{
+        width: 1.7rem;
+    }
+    #main-phone>p{
+        font-size: 24px;
+    }
+    #services{
+        width: 100vw;
+        margin: 0 0 2rem 0;
+        padding: 0;
+    }
+    .service-kind{
+        width: 100%;
+        height: 25vh;
+        margin: 0;
+        box-shadow: none;
+    }
+    .service-kind>div>h4{
+        font-size: 16px;
+
+    }
+    .service-kind>div>p{
+        font-size: 14px;
+    }
+    .icon{        
+        display: none;
+    }
+
+    #contact{
+        width: 100vw;
+        flex-direction: column;
+        height: 100%;
+        padding: 1rem 1rem;
+    }
+    .contact-detail{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-size: 12px;
+    }
+    footer{
+        font-size: 10px;
+    }
+    #services-title{
+        font-size: 24px;
+    }
 }
