--- a/styles1.css
+++ b/styles1.css
@@ -101,8 +101,9 @@ h3{
     font-style: italic;
 }
 #introduction{
-    margin-top: 2rem;
+    margin: 2rem 0 3rem 0;
     font-style: italic;
+
 }
 #main-phone>p{
     font-size: 32px;
@@ -112,7 +113,6 @@ h3{
 #main-phone{
     display: flex;
     position: relative;
-    top: 4rem;
     align-items: center;
     transition: background-color ease .5s;
     padding: .5rem 1rem;
